<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.editFragment.EditTaskFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textAutoCorrect|textCapSentences"
            android:lines="2"
            android:maxLines="3"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/addAlarmIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskTitleLayout"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_alarm_add_24" />

    <TextView
        android:id="@+id/tvSetReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskTitleLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@id/addAlarmIcon"
        android:text="@string/set_reminder"
        android:textColor="@color/white"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:textSize="15sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reminderSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/taskTitleLayout"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp" />

    <RelativeLayout
        android:id="@+id/reminderContainer"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminderSwitch">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDateLayout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextHint">

            <EditText
                android:id="@+id/taskDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:inputType="none"
                android:textColor="@color/white"
                app:backgroundTint="?attr/colorPrimaryContainer"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTimeLayout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextHint">

            <EditText
                android:id="@+id/taskTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time"
                android:inputType="none"
                android:textColor="@color/white"
                app:backgroundTint="?attr/colorPrimaryContainer" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
